Express ja EJS-template

--- a/demo04/views/index.ejs
+++ b/demo04/views/index.ejs
@@ -15,9 +15,9 @@
                 <img src="/img/logo.png" height="40" alt="Etusivulle">
                 Demo 4: Express ja EJS-templatet
             </a>
-        </div>
-
     </nav>
+
+    <%=terveiset%>
 
     <div class="container">
     
@@ -27,7 +27,7 @@
         <thead>
             <tr>
                 <th>Nimi</th>
-                <th>Käyttätunnus</th>
+                <th>Käyttäjätunnus</th>
                 <th>Sijainti</th>
             </tr>
         </thead>
@@ -43,7 +43,6 @@
     &copy; 2020 Xamk
 
     </div>
-
 
 </body>
 </html>
