Express ja EJS-templatet

--- a/demo04/views/tiedot.ejs
+++ b/demo04/views/tiedot.ejs
@@ -4,7 +4,7 @@
 
 <table class="table table-bordered">
     <tr>
-        <td>Etunimi:</td>
+        <td width="200">Etunimi:</td>
         <td><%= kayttaja.etunimi %></td>
     </tr>
     <tr>
