Express ja EJS-templatet

--- a/demo04/views/includes/header.ejs
+++ b/demo04/views/includes/header.ejs
@@ -15,6 +15,8 @@
                 <img src="/img/logo.png" height="40" alt="Etusivulle">
                 Demo 4: Express ja EJS-templatet
             </a>
+
+        </div>            
     </nav>
 
     <div class="container">
