Express-sessiot ja autentikointi

--- a/demo06/views/login.ejs
+++ b/demo06/views/login.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/login.css">
     <title>Demo 6: Express-sessiot ja autentikointi</title>
 </head>
 <body>
@@ -14,7 +15,7 @@
 
     <h2>Kirjaudu sisään</h2>
 
-        <form method="POST" action="/login">
+        <form class="form-signin" method="POST" action="/login">
 
             <input class="form-control" type="text" name="tunnus" placeholder="Käyttäjätunnus">
 
