Express-sessiot ja autentikointi

--- a/demo06/views/index.ejs
+++ b/demo06/views/index.ejs
@@ -73,7 +73,9 @@
 
     </form>
 
-    Kilometrit yhteensä: <%= kilometritYht %> km
+    <p>Kilometrit yhteensä: <%= kilometritYht %> km</p>
+
+    <a href="/logout">Kirjaudu ulos</a>
 
     </div>
 
