--- a/demo06/views/login.ejs
+++ b/demo06/views/login.ejs
@@ -13,9 +13,11 @@
 
     <h1>Demo 6: Express-sessiot ja autentikointi</h1>
 
-    <h2>Kirjaudu sisään</h2>
+    <h2>Ajopäiväkirja</h2>
 
         <form class="form-signin" method="POST" action="/login">
+
+            <h3>Kirjaudu sisään</h3>
 
             <input class="form-control" type="text" name="tunnus" placeholder="Käyttäjätunnus">
 
@@ -23,6 +25,13 @@
 
             <input class="btn btn-lg btn-primary btn-block" type="submit" value="Kirjaudu sisään">
 
+            <% if (virhe) { %>
+
+                <div class="alert alert-danger">
+                    <%= virhe %>
+                </div>
+
+            <% } %>
         </form>
 
 
