Node.js ja MySql

--- a/demo07/views/index.ejs
+++ b/demo07/views/index.ejs
@@ -14,6 +14,8 @@
 
     <h2>Palveluhinnasto</h2>
 
+    <%=palvelut%>
+
     <table class="table table-bordered">
         <thead>
             <tr>
