Node.js ja MySQL (2)

--- a/demo08/views/index.ejs
+++ b/demo08/views/index.ejs
@@ -12,6 +12,17 @@
     
     <h1>Demo 8: Node.js ja MySQL (2)</h1>
 
+    <form class="form-inline" method="POST" action="/haku">
+        <div class="card w-100 mb-3">
+            <div class="card-body">
+
+            <input class="form-control" type="text" name="hakusana" value="" placeholder="Anna hakusana..." size="60">
+            <input class="btn btn-primary" type="submit" value="Hae">
+
+            </div>
+        </div>
+    </form>
+
     <table class="table table-bordered">
 
         <thead>
