--- a/demo09/views/index.ejs
+++ b/demo09/views/index.ejs
@@ -12,6 +12,20 @@
 
     <h1>Demo 9: Node.js ja XML-resurssit (RSS-syötteet)</h1>
     
+    <h2>Xamk Read-lehden uusimmat artikkelit</h2>
+
+    <% artikkelit.forEach((artikkeli) => { %>
+
+    <h3 class="mt-3"><%=artikkeli.otsikko%></h3>
+    
+    <i><%=artikkeli.julkaistu%></i>
+
+    <p><%=artikkeli.ingressi%></p>
+
+    <a href="<%=artikkeli.linkki%>">Lue lisää</a>
+
+    <% }) %>
+
     </div>
 
 </body>
