Node.js ja REST API

--- a/demo09/views/index.ejs
+++ b/demo09/views/index.ejs
@@ -20,9 +20,7 @@
     
     <i><%=artikkeli.julkaistu%></i>
 
-    <p><%=artikkeli.ingressi%></p>
-
-    <a href="<%=artikkeli.linkki%>">Lue lisää</a>
+    <p><%-artikkeli.ingressi%></p>
 
     <% }) %>
 
